--- a/android/src/main/res/layout/view_pager.xml
+++ b/android/src/main/res/layout/view_pager.xml
@@ -3,7 +3,7 @@
     xmlns:gallery="http://schemas.android.com/apk/res-auto"
     >
 
-    <android.support.v4.view.ViewPager
+    <com.xukj.kpframework.gallery.KPViewPager
         android:id="@+id/horizontal_pager"
         style="@style/fill" />
 
