--- a/android/src/main/res/values/styles.xml
+++ b/android/src/main/res/values/styles.xml
@@ -5,12 +5,12 @@
         <item name="android:windowBackground">@android:color/black</item>
     </style>
 
-    <style name="fill">
+    <style name="kp_fill">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">match_parent</item>
     </style>
     
-    <style name="center">
+    <style name="kp_center">
         <item name="android:layout_centerInParent">true</item>
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
