add seekbar in android

--- a/android/src/main/res/layout/view_pager.xml
+++ b/android/src/main/res/layout/view_pager.xml
@@ -17,6 +17,28 @@
         gallery:left_button_visible="true"
         gallery:left_button_drawable="@drawable/ic_close"/>
 
+    <com.xukj.kpframework.gallery.ViewPageTextView
+        android:id="@+id/notice"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true" />
+
+    <SeekBar
+        android:id="@+id/seekbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
+        android:layout_alignParentBottom="true"
+        android:maxHeight="2dp"
+        android:minHeight="2dp"
+        android:paddingBottom="3dp"
+        android:paddingLeft="12dp"
+        android:max="100"
+        android:paddingRight="12dp"
+        android:paddingTop="3dp"
+        android:visibility="invisible"
+        style="@android:style/Widget.SeekBar" />
+
     <!--<Button-->
     <!--android:text="原生按钮_点击退出"-->
     <!--android:onClick="onBack"-->
