--- a/android/src/main/res/layout/view_pager_bar.xml
+++ b/android/src/main/res/layout/view_pager_bar.xml
@@ -18,7 +18,12 @@
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:singleLine="true"
-        android:textSize="16sp" />
+        android:textSize="16sp"
+        android:paddingTop="4dp"
+        android:paddingBottom="4dp"
+        android:paddingLeft="8dp"
+        android:paddingRight="8dp"
+        android:background="@drawable/bar_title_shape"/>
 
     <Button
         android:id="@+id/title_bar_right"
