--- a/android/src/main/res/layout/view_pager_page.xml
+++ b/android/src/main/res/layout/view_pager_page.xml
@@ -13,7 +13,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:indeterminateTint="@android:color/white"
+        android:indeterminateTint="#FF0F64"
         android:visibility="gone" />
 
     <TextView
